# vglab

./: .clangd  .gitattributes  .gitignore  .gitmodules  LAB.md  README.md  bootstrap.sh  justfile  pyproject.toml  troubleshooting.md
csa/: decoder.circ  xor.circ
infra/vulkan/: CMakeLists.txt  README.md
infra/vulkan/src/: get_arch.cpp
misc/idea/lanp2p/: .clangd  .gitignore  CMakeLists.txt  README.md  justfile
misc/idea/lanp2p/apps/: CMakeLists.txt
misc/idea/lanp2p/apps/lanp2p/include/lanp2p/cli/: args.hpp  commands.hpp
misc/idea/lanp2p/apps/lanp2p/src/: main.cpp
misc/idea/lanp2p/apps/lanp2p/src/cli/: args.cpp  commands.cpp
misc/idea/lanp2p/build-lanp2p/: CMakeCache.txt  Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/apps/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/apps/lanp2p/: Makefile  cmake_install.cmake  lanp2p
misc/idea/lanp2p/build-lanp2p/libs/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/libs/common/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/libs/core/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/libs/discovery/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/libs/index/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/libs/peer/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/libs/protocol/: Makefile  cmake_install.cmake
misc/idea/lanp2p/build-lanp2p/libs/transfer/: Makefile  cmake_install.cmake
misc/idea/lanp2p/cmake/: Lanp2pHelpers.cmake
misc/idea/lanp2p/docs/: ARCHITECTURE.md
misc/idea/lanp2p/include/lanp2p/: lanp2p.hpp
misc/idea/lanp2p/libs/common/include/lanp2p/common/: config.hpp  defaults.hpp  identity.hpp  types.hpp
misc/idea/lanp2p/libs/common/src/: identity.cpp
misc/idea/lanp2p/libs/core/include/lanp2p/core/: node.hpp
misc/idea/lanp2p/libs/core/src/: node.cpp
misc/idea/lanp2p/libs/discovery/include/lanp2p/discovery/: service.hpp
misc/idea/lanp2p/libs/discovery/src/: service.cpp
misc/idea/lanp2p/libs/index/: CMakeLists.txt
misc/idea/lanp2p/libs/index/include/lanp2p/index/: file_index.hpp
misc/idea/lanp2p/libs/index/src/: file_index.cpp
misc/idea/lanp2p/libs/peer/include/lanp2p/peer/: registry.hpp
misc/idea/lanp2p/libs/peer/src/: registry.cpp
misc/idea/lanp2p/libs/protocol/include/lanp2p/protocol/: codec.hpp  message.hpp
misc/idea/lanp2p/libs/protocol/src/: codec.cpp
misc/idea/lanp2p/libs/transfer/include/lanp2p/transfer/: client.hpp  server.hpp  tcp_channel.hpp
misc/idea/lanp2p/libs/transfer/src/: client.cpp  server.cpp  tcp_channel.cpp
misc/idea/netop/: Cargo.toml  README.md  justfile
misc/idea/netop/docs/: ARCHITECTURE.md
misc/idea/netop/src/: cli.rs  main.rs  util.rs
misc/idea/netop/src/app/: mod.rs  model.rs  view.rs
misc/idea/netop/src/collector/: interface.rs  mod.rs  process.rs  snapshot.rs
misc/idea/netop/src/control/: kill.rs  mod.rs
misc/idea/p2p/apps/lanp2p/: CMakeLists.txt
misc/idea/p2p/apps/lanp2p/include/lanp2p/cli/: args.hpp  commands.hpp
misc/idea/p2p/apps/lanp2p/src/cli/: args.cpp  commands.cpp
misc/idea/p2p/libs/core/: CMakeLists.txt
misc/idea/p2p/libs/core/include/lanp2p/core/: node.hpp
misc/idea/p2p/libs/core/src/: node.cpp
misc/idea/p2p/libs/discovery/: CMakeLists.txt
misc/idea/p2p/libs/discovery/include/lanp2p/discovery/: service.hpp
misc/idea/p2p/libs/discovery/src/: service.cpp
misc/idea/p2p/libs/protocol/: CMakeLists.txt
misc/idea/p2p/libs/protocol/include/lanp2p/protocol/: codec.hpp  message.hpp
misc/idea/p2p/libs/protocol/src/: codec.cpp
misc/idea/p2p/libs/transfer/: CMakeLists.txt
misc/idea/p2p/libs/transfer/src/: client.cpp  server.cpp  tcp_channel.cpp
network/netstack/: CMakeLists.txt  README.md  justfile  plan.md  todo.md
network/netstack/docs/: m0.md  m1.md  m2+.md  m2.md  m3.md  module-map.md  tcp-rfc793-states.md
network/netstack/docs/adr/: 001-buffer-ownership.md  002-m0-scope.md  003-m1-udp-echo.md  004-m2-tcp-simplified.md  005-m2-ext-demuxer-connect.md  006-m3-tun-linux.md
network/netstack/examples/: tun_tcp_echo.cc
network/netstack/include/netstack/: address.hh  seqnum.hh  subnet.hh
network/netstack/include/netstack/header/: checksum.hh  ipv4.hh  tcp.hh  udp.hh
network/netstack/include/netstack/link/: channel.hh  fdbased.hh  loopback.hh  tun.hh
network/netstack/include/netstack/net/ipv4/: protocol.hh  send.hh
network/netstack/include/netstack/ports/: port_manager.hh
network/netstack/include/netstack/stack/: network_protocol.hh  nic.hh  registration.hh  stack.hh  transport.hh
network/netstack/include/netstack/transport/tcp/: connection.hh  endpoint.hh  listener.hh  protocol.hh  state.hh
network/netstack/include/netstack/transport/udp/: endpoint.hh  protocol.hh
network/netstack/references/: architecture.md
network/netstack/src/header/: checksum.cc  ipv4.cc  tcp.cc  udp.cc
network/netstack/src/link/: channel.cc  fdbased.cc  loopback.cc  tun.cc
network/netstack/src/net/ipv4/: protocol.cc  send.cc
network/netstack/src/netstack/: address.cc  subnet.cc
network/netstack/src/ports/: port_manager.cc
network/netstack/src/stack/: network_protocol.cc  nic.cc  stack.cc  transport_demuxer.cc
network/netstack/src/transport/tcp/: connection.cc  endpoint.cc  listener.cc  protocol.cc
network/netstack/src/transport/udp/: endpoint.cc  protocol.cc
network/netstack/tcpip/: justfile
network/netstack/tcpip/include/: ip.hh
network/netstack/tcpip/src/: ip.cc  tcp.cc
network/netstack/tests/header/: ipv4_test.cc  tcp_test.cc  udp_test.cc
network/netstack/tests/link/: fdbased_test.cc
network/netstack/tests/m0/: ipv4_acceptance_test.cc
network/netstack/tests/m1/: udp_echo_test.cc
network/netstack/tests/m2/: packet_builder.hh  tcp_backlog_test.cc  tcp_connect_test.cc  tcp_handshake_test.cc  tcp_transfer_test.cc
network/netstack/tests/seqnum/: seqnum_test.cc
network/netstack/tests/stack/: loopback_dispatch_test.cc
network/tcpip/: CMakeLists.txt  justfile  main.cc
network/tcpip/include/: ip.hh  tcp.hh  utils.hh
network/tcpip/src/: ip.cc  tcp.cc  utils.cc
(+76 files in other folders)
