[project]
name = "vglab"
version = "0.1.0"
description = "Lab repo for Computer Science self learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pymysql>=1.2.0",
    "torch>=2.11.0",
]
