[package]
name = "netop"
version = "0.1.0"
edition = "2021"
description = "Network resource monitor and control TUI (htop-style)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "netop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
